<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>LD</groupId>
    <artifactId>LD</artifactId>
    <version>1.0</version>

    <!-- Java 14 -->
    <properties>
        <java.version>14</java.version>
        <downloadSources>true</downloadSources>
        <downloadJavadocs>true</downloadJavadocs>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>14</maven.compiler.source>
        <maven.compiler.target>14</maven.compiler.target>
        <maven.test.skip>true</maven.test.skip>
        <enable.security.in.project>false</enable.security.in.project>

        <junit>5.5.2</junit>
        <spring-boot.version>2.2.6.RELEASE</spring-boot.version>
        <jackson.version>2.10.3</jackson.version>
        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
        <flyway.version>6.5.3</flyway.version>
        <jsoup.version>1.13.1</jsoup.version>
        <testcontainers.version>1.14.3</testcontainers.version>
        <mockito-core.version>2.23.4</mockito-core.version>
        <mockito-junit-jupiter.version>2.23.0</mockito-junit-jupiter.version>
        <junit.platform.version>1.5.2</junit.platform.version>
        <lombok.version>1.18.12</lombok.version>
        <postgresql.version>42.2.10</postgresql.version>
        <h2.version>1.4.200</h2.version>
        <swagger.version>2.9.2</swagger.version>
        <log4j.version>2.13.1</log4j.version>
        <hibernate-jpamodelgen.version>5.4.21.Final</hibernate-jpamodelgen.version>
    </properties>

    <parent>
        <artifactId>spring-boot-starter-parent</artifactId>
        <groupId>org.springframework.boot</groupId>
        <version>2.2.6.RELEASE</version>
    </parent>

    <profiles>
        <profile>
            <id>unit-tests</id>
            <properties>
                <maven.test.skip>false</maven.test.skip>
            </properties>
            <!--            <plugins>-->
            <!--                <plugin>-->
            <!--                    <jacoco>-->
            <!--                </plugin>-->
            <!--            </plugins>-->
        </profile>
        <profile>
            <id>enableSecurity</id>
            <properties>
                <enable.security.in.project>true</enable.security.in.project>
            </properties>
        </profile>
        <profile>
            <id>buildDockerImageIntoLocalRepo</id>
            <!--            <build>-->
            <!--                <plugins>-->
            <!--                    <plugin>-->
            <!--                        <groupId>com.google.cloud.tools</groupId>-->
            <!--                        <artifactId>jib-maven-plugin</artifactId>-->
            <!--                        <version>2.5.0</version>-->
            <!--                        <configuration>-->
            <!--                            <to>-->
            <!--                                <image>${artifactId}:${version}:INTEGRATION-TEST</image>-->
            <!--                            </to>-->
            <!--                        </configuration>-->
            <!--                    </plugin>-->
            <!--                </plugins>-->
            <!--            </build>-->
            <!--            <execution>-->
            <!--                <stage = deploy></stage>-->
            <!--            </execution>-->
        </profile>
        <profile>
            <id>buildDockerImageIntoRemoteRepo</id>
            <!--            <build>-->
            <!--                <plugins>-->
            <!--                    <plugin>-->
            <!--                        <groupId>com.google.cloud.tools</groupId>-->
            <!--                        <artifactId>jib-maven-plugin</artifactId>-->
            <!--                        <version>2.5.0</version>-->
            <!--                        <configuration>-->
            <!--                            <to>-->
            <!--                                <image>${artifactId}:${version}:RELEASE</image>-->
            <!--                            </to>-->
            <!--                        </configuration>-->
            <!--                    </plugin>-->
            <!--                </plugins>-->
            <!--            </build>-->
            <!--            <execution>-->
            <!--                <stage = deploy></stage>-->
            <!--            </execution>-->
        </profile>
        <profile>
            <id>sonar</id>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <reuseForks>false</reuseForks>
                    <useSystemClassLoader>true</useSystemClassLoader>
                    <useManifestOnlyJar>false</useManifestOnlyJar>
                    <forkedProcessExitTimeoutInSeconds>200</forkedProcessExitTimeoutInSeconds>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>postgresql</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito-core.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito-junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>${junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>${junit.platform.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-runner</artifactId>
            <version>${junit.platform.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${postgresql.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${spring-boot.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
            <version>${spring-boot.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <version>${spring-boot.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
            <version>${h2.version}</version>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger2</artifactId>
            <version>${swagger.version}</version>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger-ui</artifactId>
            <version>${swagger.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
            <version>${spring-boot.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoup.version}</version>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
            <version>${flyway.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-jpamodelgen</artifactId>
            <version>${hibernate-jpamodelgen.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>4.1.2</version>
        </dependency>

    </dependencies>
</project>